# Termites

./: LICENSE  README.md  TODO.md
Examples/TermiteSaves/: onedepthsecondnode.ter  testFirstSubnode.ter  testTwoLevels.ter
data/gsettings/: net.vinibo.Termites.gschema.xml
data/shortcut/: Termites.desktop
src/: Makefile  Makefile.am  Makefile.in  application.c  application.vala  build.sh  config.c  config.vala  configWindow.vala  fileHelper.c  fileHelper.vala  meson.build  node.c  node.vala  nodeEnvironment.vala  nodeProperties.c  nodeProperties.vala  nodeType.vala  protocol.c  protocol.vala  resources.c  termiteStore.c  termiteStore.vala  termites.c  termites.vala  termitesTerminal.vala  uiRes.xml
src/.deps/: node.Po  nodeProperties.Po  termites.Po
src/ui/: aboutTermites.ui  config.ui  nodeProperties.ui  termites.ui
